Fix the version number layout on firefox

--- a/priv/static/css/app.css
+++ b/priv/static/css/app.css
@@ -107,8 +107,6 @@ body {
   
   .version form:before {
     content: "\25BC";
-    font-size: .8rem;
-    margin-left: 2rem;
   }
 
   .select-version {
